--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
   <!-- Navigation -->
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
-      <a class="navbar-brand" href="http://www.requirementone.com">RequirementONE</a>
-      <a class="btn btn-primary" href="#">Log In</a>
+      <a class="navbar-brand logo" href="https://www.requirementone.com/"></a>
+	  <a class="btn btn-primary" href="#">Log In</a>
     </div>
   </nav>
 
