--- a/index.html
+++ b/index.html
@@ -35,22 +35,22 @@
       <div class="container-fluid">
 	    <!-- Brand and toggle get grouped for better mobile display -->
 		<div class="navbar-header">
-			<a class="navbar-brand" href="https://www.requirementone.com/"><img alt="RequirementONE" src="./img/RequirementONE_Logo.jpg"></a>
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar-collapse" aria-expanded="false">
+			<button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#main-navbar-collapse" aria-expanded="false">
 				<span class="sr-only">Toggle navigation</span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
+			<a class="navbar-brand" href="https://www.requirementone.com/"><img alt="RequirementONE" src="./img/RequirementONE_Logo.jpg"></a>
 		</div>
 		<div class="collapse navbar-collapse" id="main-navbar-collapse">
 			<ul class="nav navbar-nav">
-			<li class="active"><a href="#">Home<span class="sr-only">(current)<span></a></li>
+			<li class="active"><a href="https://www.requirementone.com/">Home<span class="sr-only">(current)<span></a></li>
 			<li class="dropdown">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About us <span class="caret"></span></a>
 				<ul class="dropdown-menu">
-					<li><a href="#">a</a></li>
-					<li><a href="#">b</a></li>
+					<li><a href="https://www.requirementone.com/">a</a></li>
+					<li><a href="https://www.requirementone.com/">b</a></li>
 				</ul>
 			</li>
 			</ul>
