Added nav menu minus links

--- a/index.html
+++ b/index.html
@@ -31,32 +31,51 @@
 
 <body>
   <!-- Navigation -->
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-	    <!-- Brand and toggle get grouped for better mobile display -->
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#main-navbar-collapse" aria-expanded="false">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand" href="https://www.requirementone.com/"><img alt="RequirementONE" src="./img/RequirementONE_Logo.jpg"></a>
-		</div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light static-top">
+      <div class="container">
+		<a class="navbar-brand" href="https://www.requirementone.com/"><img alt="RequirementONE" src="./img/RequirementONE_Logo.jpg"></a>
+		<button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#main-navbar-collapse" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle-navigation">
+		</button>	
 		<div class="collapse navbar-collapse" id="main-navbar-collapse">
-			<ul class="nav navbar-nav">
-			<li class="active"><a href="https://www.requirementone.com/">Home<span class="sr-only">(current)<span></a></li>
-			<li class="dropdown">
-				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About us <span class="caret"></span></a>
-				<ul class="dropdown-menu">
-					<li><a href="https://www.requirementone.com/">a</a></li>
-					<li><a href="https://www.requirementone.com/">b</a></li>
-				</ul>
-			</li>
+			<ul class="navbar-nav ml-auto">
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Solutions <span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						<li><a class="nav-link" href="https://www.requirementone.com/">R1 Apps</a></li>
+						<li><a class="nav-link" href="https://www.requirementone.com/">Monitor regulatory developments</a></li>
+						<li><a class="nav-link" href="https://www.requirementone.com/">Manage policies, procedures, controls and risks</a></li>
+						<li><a class="nav-link" href="https://www.requirementone.com/">Plan and manage change</a></li>
+						<li><a class="nav-link" href="https://www.requirementone.com/">Manage requirements</a></li>
+						<li><a class="nav-link" href="https://www.requirementone.com/">Track and manage communications</a></li>
+						<li><a class="nav-link" href="https://www.requirementone.com/">Share regulatory intelligence</a></li>
+						<li><a class="nav-link" href="https://www.requirementone.com/">R1 Platform</a></li>
+					</ul>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Resources <span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						<li><a class="nav-link" href="https://www.requirementone.com/">Blog</a></li>
+						<li><a class="nav-link" href="https://www.requirementone.com/">News</a></li>
+					</ul>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="https://www.requirementone.com/">Pricing
+					<span class="sr-only"><span>
+					</a>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						<li><a class="nav-link" href="https://www.requirementone.com/">About us</a></li>
+						<li><a class="nav-link" href="https://www.requirementone.com/">Why us?</a></li>
+						<li><a class="nav-link" href="https://www.requirementone.com/">Join us</a></li>
+						<li><a class="nav-link" href="https://www.requirementone.com/">Contact us</a></li>
+					</ul>
+				</li>
 			</ul>
 		<a class="btn btn-primary" href="#">Log In</a>
 		</div> <!--/.navbar-collapse -->
-	 </div> <!--/.container-fluid -->
+	 </div> <!--/.container -->
    </nav>
    
   <!-- Masthead -->
