--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<ul class="dropdown-menu">
 						<li><a class="nav-link" href="https://www.requirementone.com/">R1 Apps</a></li>
 						<li><a class="nav-link" href="https://www.requirementone.com/">Monitor regulatory developments</a></li>
-						<li><a class="nav-link" href="https://www.requirementone.com/">Manage policies, procedures, controls and risks</a></li>
+						<li><a class="nav-link" href="https://www.requirementone.com/">Manage policies, controls and risks</a></li>
 						<li><a class="nav-link" href="https://www.requirementone.com/">Plan and manage change</a></li>
 						<li><a class="nav-link" href="https://www.requirementone.com/">Manage requirements</a></li>
 						<li><a class="nav-link" href="https://www.requirementone.com/">Track and manage communications</a></li>
