Changed filename to fix case sensitive issue.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light static-top">
       <div class="container">
-		<a class="navbar-brand" href="https://www.requirementone.com/"><img alt="RequirementONE" src="./img/RequirementONE_Logo.jpg"></a>
+		<a class="navbar-brand" href="https://www.requirementone.com/"><img alt="RequirementONE" src="img/RequirementONE_logo.jpg"></a>
 		<button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#main-navbar-collapse" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle-navigation">
 		</button>	
 		<div class="collapse navbar-collapse" id="main-navbar-collapse">
