--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
 						<li><a class="nav-link" href="https://www.requirementone.com/">Manage requirements</a></li>
 						<li><a class="nav-link" href="https://www.requirementone.com/">Track and manage communications</a></li>
 						<li><a class="nav-link" href="https://www.requirementone.com/">Share regulatory intelligence</a></li>
+						<li role="separator" class="dropdown-divider"></li>
 						<li><a class="nav-link" href="https://www.requirementone.com/">R1 Platform</a></li>
+						<li><a class="nav-link" href="https://www.requirementone.com/">Business benefits</a></li>
+						<li><a class="nav-link" href="https://www.requirementone.com/">Powerful capabilities</a></li>
 					</ul>
 				</li>
 				<li class="nav-item dropdown">
@@ -84,7 +87,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h1 class="mb-5">Manually searching regulatory and industry intelligence is difficult and expensive.</h1>
+          <h1 class="mb-5">Manually searching regulatory and industry intelligence is difficult and costly</h1>
 		  <h1>We make it so simple</h1>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
@@ -119,7 +122,7 @@
               <i class="icon-layers m-auto text-primary"></i>
             </div>
             <h3>Faster</h3>
-            <p class="lead mb-0">Reduce time for review by 50%</p>
+            <p class="lead mb-0">Reduce review and approve time by 50%</p>
           </div>
         </div>
         <div class="col-lg-4">
@@ -128,7 +131,7 @@
               <i class="icon-check m-auto text-primary"></i>
             </div>
             <h3>Easy to Use</h3>
-            <p class="lead mb-0">Increase team work and productivity by 200%</p>
+            <p class="lead mb-0">Increase teaming and productivity by 200%</p>
           </div>
         </div>
       </div>
@@ -140,14 +143,14 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters">
 
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/plant.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>Compliance simplified</h2>
           <p class="lead mb-0">RequirementONE is the world’s first and only apps-based platform you’ll ever need to stay informed and collaboratively manage all of your non-financial risks</p>
         </div>
       </div>
       <div class="row no-gutters">
-        <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
+        <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/gold.jpg');"></div>
         <div class="col-lg-6 my-auto showcase-text">
           <h2>Business value</h2>
           <p class="lead mb-0">RequirementONE quickly digitally transforms and modernizes your compliance organization and capabilities overnight without the complexity and expense of traditional software and services.</p>
@@ -163,23 +166,23 @@
       <div class="row">
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
+            <img class="img-fluid rounded-circle mb-3" src="img/files.jpg" alt="">
+            <h5>Maria</h5>
+            <p class="font-weight-light mb-0">"I used to carry around wads of printouts, shuffling multiple Excel and Word files to ensure regulatory and standards compliance. I moved away from this document-based approach to RequirementONE"</p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="img/map.jpg" alt="">
             <h5>Mary</h5>
-            <p class="font-weight-light mb-0">"“I used to carry around wads of printouts, shuffling multiple Excel and Word files to ensure regulatory and standards compliance. I moved away from this document-based approach to RequirementONE”"</p>
+            <p class="font-weight-light mb-0">"My team is able to collaborate from around the world, avoid version control issues, and manage change. Our auditors can then go to this single point of truth where we demonstrate compliance with multiple standards, mapped to industry standard frameworks. What a relief!"</p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
-            <h5>Mark</h5>
-            <p class="font-weight-light mb-0">"Ditch the Word and Excel, and move to RequirementONE"</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
-            <h5>Gavin</h5>
-            <p class="font-weight-light mb-0">"Best in class"</p>
+            <img class="img-fluid rounded-circle mb-3" src="img/stop.jpg" alt="">
+            <h5>Patrick</h5>
+            <p class="font-weight-light mb-0">"We would definitely recommend RequirmentONE. The improvements we gained in efficiency, collaboration and productivity made choosing it an easy decision. DROP the Word and Excel and go to RequirementONE"</p>
           </div>
         </div>
       </div>
