--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body>
   <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light static-top">
+    <nav class="navbar navbar-expand-lg navbar-expand-md navbar-expand-sm navbar-light bg-light static-top">
       <div class="container">
 		<a class="navbar-brand" href="https://www.requirementone.com/"><img alt="RequirementONE" src="img/RequirementONE_logo.jpg"></a>
 		<button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#main-navbar-collapse" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle-navigation">
