--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
 
 <body>
   <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-expand-md navbar-expand-sm navbar-light bg-light static-top">
+    <nav class="navbar navbar-expand-md navbar-light bg-light static-top">
       <div class="container">
 		<a class="navbar-brand" href="https://www.requirementone.com/"><img alt="RequirementONE" src="img/RequirementONE_logo.jpg"></a>
-		<button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#main-navbar-collapse" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle-navigation">
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar-collapse" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle-navigation">
+		<span class="navbar-toggler-icon"></span>
 		</button>	
 		<div class="collapse navbar-collapse" id="main-navbar-collapse">
 			<ul class="navbar-nav ml-auto">
