--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
           <form>
             <div class="form-row">
-              <div class="col-12 col-md-12">
-                <button type="submit" class="btn btn-block btn-lg btn-primary">Get free near-time regulatory intelligence now</button>
+              <div class="col-8 col-md-12">
+                <button type="submit" class="btn btn-block btn-lg btn-primary">Start for free now</button>
               </div>
             </div>
           </form>
@@ -198,20 +198,22 @@
         <div class="col-xl-9 mx-auto">
           <h2 class="mb-4">Get started for free</h2>
         </div>
-        <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
+  <!--       <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
           <form>
-            <div class="form-row">
-              <div class="col-12 col-md-9 mb-2 mb-md-0">
+            <div class="form-row"> -->
+			    <div class="col-8 col-md-12">
+                <button type="submit" class="btn btn-block btn-lg btn-primary">Go</button>
+              </div>
+ <!--             <div class="col-12 col-md-9 mb-2 mb-md-0">
                 <input type="email" class="form-control form-control-lg" placeholder="Email address">
               </div>
               <div class="col-12 col-md-3">
                 <button type="submit" class="btn btn-block btn-lg btn-primary">Go</button>
-              </div>
+              </div> 
             </div>
-          </form>
+          </form> -->
         </div>
       </div>
-    </div>
   </section>
 
   <!-- Footer -->
