Compiling almost finished version

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <meta name="author" content="">
 
   <title>RequirementONE Home</title>
+  
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
+  
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -21,17 +27,12 @@
   <!-- Custom styles for this template -->
   <link href="css/landing-page.min.css" rel="stylesheet">
   
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
-  
-  <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
   <!-- Navigation -->
-    <nav class="navbar navbar-expand-md navbar-light bg-light static-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light static-top">
       <div class="container">
 		<a class="navbar-brand" href="https://www.requirementone.com/"><img alt="RequirementONE" src="img/RequirementONE_logo.jpg"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar-collapse" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle-navigation">
@@ -95,7 +96,7 @@
           <form>
             <div class="form-row">
               <div class="col-8 col-md-12">
-                <button type="submit" class="btn btn-block btn-lg btn-primary">Start for free now</button>
+                <button type="submit" class="btn btn-block btn-lg btn-primary">Start now</button>
               </div>
             </div>
           </form>
@@ -195,23 +196,12 @@
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
-        <div class="col-xl-9 mx-auto">
+        <div class="col-xl-6 mx-auto">
           <h2 class="mb-4">Get started for free</h2>
         </div>
-  <!--       <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-          <form>
-            <div class="form-row"> -->
-			    <div class="col-8 col-md-12">
+			    <div class="col-xl-6 mx-auto">
                 <button type="submit" class="btn btn-block btn-lg btn-primary">Go</button>
               </div>
- <!--             <div class="col-12 col-md-9 mb-2 mb-md-0">
-                <input type="email" class="form-control form-control-lg" placeholder="Email address">
-              </div>
-              <div class="col-12 col-md-3">
-                <button type="submit" class="btn btn-block btn-lg btn-primary">Go</button>
-              </div> 
-            </div>
-          </form> -->
         </div>
       </div>
   </section>
